examples/fail/Rxl-S.stl
/** Relim **/
global x; 
local l; 

/** Optimised **/ 

/** Unoptimised **/ 
read(x,l); 
